InSCAPE/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gisdefs.h


int G_lookup_c_raster_colors(const CELL *, unsigned char *, unsigned char *,
			     unsigned char *, unsigned char *, int,
			     struct Colors *);

int G_lookup_raster_colors(const void *, unsigned char *, unsigned char *,
			   unsigned char *, unsigned char *, int,
			   struct Colors *, RASTER_MAP_TYPE);

int G_lookup_f_raster_colors(const FCELL *, unsigned char *, unsigned char *,
			     unsigned char *, unsigned char *, int,
			     struct Colors *);

int G_lookup_d_raster_colors(const DCELL *, unsigned char *, unsigned char *,
			     unsigned char *, unsigned char *, int,
			     struct Colors *);

int G__lookup_colors(const void *, unsigned char *, unsigned char *,
		     unsigned char *, unsigned char *, int, struct Colors *,
		     int, int, RASTER_MAP_TYPE);

int G__interpolate_color_rule(DCELL, unsigned char *, unsigned char *,
			      unsigned char *, const struct _Color_Rule_ *);


/* color_org.c */
int G__organize_colors(struct Colors *);


/* color_rand.c */
int G_make_random_colors(struct Colors *, CELL, CELL);


/* color_range.c */
int G_set_color_range(CELL, CELL, struct Colors *);

int G_set_d_color_range(DCELL, DCELL, struct Colors *);

int G_get_color_range(CELL *, CELL *, const struct Colors *);

int G_get_d_color_range(DCELL *, DCELL *, const struct Colors *);


/* color_read.c */
int G_read_colors(const char *, const char *, struct Colors *);

int G_mark_colors_as_fp(struct Colors *);


/* color_remove.c */
int G_remove_colors(const char *, const char *);


/* color_rule.c */
int G_add_d_raster_color_rule(const DCELL *, int, int, int, const DCELL *,
			      int, int, int, struct Colors *);

int G_add_f_raster_color_rule(const FCELL *, int, int, int, const FCELL *,
			      int, int, int, struct Colors *);

int G_add_c_raster_color_rule(const CELL *, int, int, int, const CELL *, int,
			      int, int, struct Colors *);

int G_add_raster_color_rule(const void *, int, int, int, const void *, int,
			    int, int, struct Colors *, RASTER_MAP_TYPE);

int G_add_color_rule(const CELL, int, int, int, const CELL, int, int, int,
		     struct Colors *);

int G_add_modular_d_raster_color_rule(const DCELL *, int, int, int,
				      const DCELL *, int, int, int,
				      struct Colors *);

int G_add_modular_f_raster_color_rule(const FCELL *, int, int, int,
				      const FCELL *, int, int, int,
				      struct Colors *);

int G_add_modular_c_raster_color_rule(const CELL *, int, int, int,
				      const CELL *, int, int, int,
				      struct Colors *);

int G_add_modular_raster_color_rule(const void *, int, int, int, const void *,
				    int, int, int, struct Colors *,
				    RASTER_MAP_TYPE);

int G_add_modular_color_rule(CELL, int, int, int, CELL, int, int, int,
			     struct Colors *);


/* color_rule_get.c */
int G_colors_count(const struct Colors *);

int G_get_f_color_rule(DCELL *, unsigned char *, unsigned char *,
		       unsigned char *, DCELL *, unsigned char *,
		       unsigned char *, unsigned char *,
		       const struct Colors *, int);


/* color_rules.c */
typedef int read_rule_fn(void *, DCELL, DCELL,
			 DCELL *, int *, int *, int *, int *, int *, int *);

int G_parse_color_rule(DCELL, DCELL, const char *, DCELL *, int *, int *,
		       int *, int *, int *, int *);