OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/gis.py


# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 286
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_lookup_c_raster_colors'):
    G_lookup_c_raster_colors = _libs['grass_gis.6.4.2RC2'].G_lookup_c_raster_colors
    G_lookup_c_raster_colors.restype = c_int
    G_lookup_c_raster_colors.argtypes = [POINTER(CELL), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 289
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_lookup_raster_colors'):
    G_lookup_raster_colors = _libs['grass_gis.6.4.2RC2'].G_lookup_raster_colors
    G_lookup_raster_colors.restype = c_int
    G_lookup_raster_colors.argtypes = [POINTER(None), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), c_int, POINTER(struct_Colors), RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 292
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_lookup_f_raster_colors'):
    G_lookup_f_raster_colors = _libs['grass_gis.6.4.2RC2'].G_lookup_f_raster_colors
    G_lookup_f_raster_colors.restype = c_int
    G_lookup_f_raster_colors.argtypes = [POINTER(FCELL), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 295
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_lookup_d_raster_colors'):
    G_lookup_d_raster_colors = _libs['grass_gis.6.4.2RC2'].G_lookup_d_raster_colors
    G_lookup_d_raster_colors.restype = c_int
    G_lookup_d_raster_colors.argtypes = [POINTER(DCELL), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 298
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__lookup_colors'):
    G__lookup_colors = _libs['grass_gis.6.4.2RC2'].G__lookup_colors
    G__lookup_colors.restype = c_int
    G__lookup_colors.argtypes = [POINTER(None), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), c_int, POINTER(struct_Colors), c_int, c_int, RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 301
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__interpolate_color_rule'):
    G__interpolate_color_rule = _libs['grass_gis.6.4.2RC2'].G__interpolate_color_rule
    G__interpolate_color_rule.restype = c_int
    G__interpolate_color_rule.argtypes = [DCELL, POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(struct__Color_Rule_)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 305
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__organize_colors'):
    G__organize_colors = _libs['grass_gis.6.4.2RC2'].G__organize_colors
    G__organize_colors.restype = c_int
    G__organize_colors.argtypes = [POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 308
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_make_random_colors'):
    G_make_random_colors = _libs['grass_gis.6.4.2RC2'].G_make_random_colors
    G_make_random_colors.restype = c_int
    G_make_random_colors.argtypes = [POINTER(struct_Colors), CELL, CELL]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 311
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_color_range'):
    G_set_color_range = _libs['grass_gis.6.4.2RC2'].G_set_color_range
    G_set_color_range.restype = c_int
    G_set_color_range.argtypes = [CELL, CELL, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 312
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_set_d_color_range'):
    G_set_d_color_range = _libs['grass_gis.6.4.2RC2'].G_set_d_color_range
    G_set_d_color_range.restype = c_int
    G_set_d_color_range.argtypes = [DCELL, DCELL, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 313
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_color_range'):
    G_get_color_range = _libs['grass_gis.6.4.2RC2'].G_get_color_range
    G_get_color_range.restype = c_int
    G_get_color_range.argtypes = [POINTER(CELL), POINTER(CELL), POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 314
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_d_color_range'):
    G_get_d_color_range = _libs['grass_gis.6.4.2RC2'].G_get_d_color_range
    G_get_d_color_range.restype = c_int
    G_get_d_color_range.argtypes = [POINTER(DCELL), POINTER(DCELL), POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 317
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_read_colors'):
    G_read_colors = _libs['grass_gis.6.4.2RC2'].G_read_colors
    G_read_colors.restype = c_int
    G_read_colors.argtypes = [String, String, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 318
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_mark_colors_as_fp'):
    G_mark_colors_as_fp = _libs['grass_gis.6.4.2RC2'].G_mark_colors_as_fp
    G_mark_colors_as_fp.restype = c_int
    G_mark_colors_as_fp.argtypes = [POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 321
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_remove_colors'):
    G_remove_colors = _libs['grass_gis.6.4.2RC2'].G_remove_colors
    G_remove_colors.restype = c_int
    G_remove_colors.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 324
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_d_raster_color_rule'):
    G_add_d_raster_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_d_raster_color_rule
    G_add_d_raster_color_rule.restype = c_int
    G_add_d_raster_color_rule.argtypes = [POINTER(DCELL), c_int, c_int, c_int, POINTER(DCELL), c_int, c_int, c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 326
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_f_raster_color_rule'):
    G_add_f_raster_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_f_raster_color_rule
    G_add_f_raster_color_rule.restype = c_int
    G_add_f_raster_color_rule.argtypes = [POINTER(FCELL), c_int, c_int, c_int, POINTER(FCELL), c_int, c_int, c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 328
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_c_raster_color_rule'):
    G_add_c_raster_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_c_raster_color_rule
    G_add_c_raster_color_rule.restype = c_int
    G_add_c_raster_color_rule.argtypes = [POINTER(CELL), c_int, c_int, c_int, POINTER(CELL), c_int, c_int, c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 330
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_raster_color_rule'):
    G_add_raster_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_raster_color_rule
    G_add_raster_color_rule.restype = c_int
    G_add_raster_color_rule.argtypes = [POINTER(None), c_int, c_int, c_int, POINTER(None), c_int, c_int, c_int, POINTER(struct_Colors), RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 332
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_color_rule'):
    G_add_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_color_rule
    G_add_color_rule.restype = c_int
    G_add_color_rule.argtypes = [CELL, c_int, c_int, c_int, CELL, c_int, c_int, c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 334
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_modular_d_raster_color_rule'):
    G_add_modular_d_raster_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_modular_d_raster_color_rule
    G_add_modular_d_raster_color_rule.restype = c_int
    G_add_modular_d_raster_color_rule.argtypes = [POINTER(DCELL), c_int, c_int, c_int, POINTER(DCELL), c_int, c_int, c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 337
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_modular_f_raster_color_rule'):
    G_add_modular_f_raster_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_modular_f_raster_color_rule
    G_add_modular_f_raster_color_rule.restype = c_int
    G_add_modular_f_raster_color_rule.argtypes = [POINTER(FCELL), c_int, c_int, c_int, POINTER(FCELL), c_int, c_int, c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 340
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_modular_c_raster_color_rule'):
    G_add_modular_c_raster_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_modular_c_raster_color_rule
    G_add_modular_c_raster_color_rule.restype = c_int
    G_add_modular_c_raster_color_rule.argtypes = [POINTER(CELL), c_int, c_int, c_int, POINTER(CELL), c_int, c_int, c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 343
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_modular_raster_color_rule'):
    G_add_modular_raster_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_modular_raster_color_rule
    G_add_modular_raster_color_rule.restype = c_int
    G_add_modular_raster_color_rule.argtypes = [POINTER(None), c_int, c_int, c_int, POINTER(None), c_int, c_int, c_int, POINTER(struct_Colors), RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 346
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_add_modular_color_rule'):
    G_add_modular_color_rule = _libs['grass_gis.6.4.2RC2'].G_add_modular_color_rule
    G_add_modular_color_rule.restype = c_int
    G_add_modular_color_rule.argtypes = [CELL, c_int, c_int, c_int, CELL, c_int, c_int, c_int, POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 350
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_colors_count'):
    G_colors_count = _libs['grass_gis.6.4.2RC2'].G_colors_count
    G_colors_count.restype = c_int
    G_colors_count.argtypes = [POINTER(struct_Colors)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 351
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_get_f_color_rule'):
    G_get_f_color_rule = _libs['grass_gis.6.4.2RC2'].G_get_f_color_rule
    G_get_f_color_rule.restype = c_int
    G_get_f_color_rule.argtypes = [POINTER(DCELL), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(DCELL), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(c_ubyte), POINTER(struct_Colors), c_int]

read_rule_fn = CFUNCTYPE(UNCHECKED(c_int), POINTER(None), DCELL, DCELL, POINTER(DCELL), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)) # c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 357

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 359
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_parse_color_rule'):
    G_parse_color_rule = _libs['grass_gis.6.4.2RC2'].G_parse_color_rule
    G_parse_color_rule.restype = c_int
    G_parse_color_rule.argtypes = [DCELL, DCELL, String, POINTER(DCELL), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int), POINTER(c_int)]
